--- a/ChowBox.html
+++ b/ChowBox.html
@@ -22,106 +22,65 @@
                <div class="homeNav">
                   <ul class = "navigation_list">
                      <li class="navigation_item-toggle">
-                        <a href="#homepage">ChowBox</a>
+                        <a href="#homepage">Chow Box</a>
                      </li>
                      <li class="navigation_item">
-                        <a href="#about">WEBSITE</a>
+                        <a href="#about">MISSION</a>
                      </li>
                      <li class="navigation_item">
-                        <a href="#projects">MOBILE APP</a>		
+                        <a href="#projects">PROCESS</a>		
                      </li>
-                     <li class="navigation_item" href="#">
-                        OTHER
-                     </li>
+                     <li class="navigation_item">
+                          <a href="#app">PROTOTYPE</a>	
+                    </li>
                   </ul>
                </div>
             </nav>
-            <div class="col-md-8 decervoHomeSector">
-               <!--<h1 class = "title">deCervo</h1>-->
-               <!--<h1 class = "titleName">Role: UI Designer, UX Designer, Mobile App Developer</h1>-->
+            <div class="col-md-8 chowHomeSector">
             </div>
 
-            <div class="col-md-8 decervoAboutSector">
+            <div class="col-md-8 chowAboutSector">
                 <div class="container">
-                    <div class="decervoText">
-                    <h1>Role: UI Designer, UX Designer, Mobile App Developer</h1>
-                    <h1>deCervo is a New York, Colombia based company focused .  My work and involvement with the company began in the Spring 2016.  From my extensive background in baseball, knowledge of code/engineering, and user experience I have been able to redesign and assist in iteration of their mobile application and have most recently designed, directed, and implemented deCervo's entire website overhaul.    
-                    <br>
-                    Due to the current size of the company, my days were spent quickly learning, constantly adapting, and tailoring my skills for the ultimate goal of the company.  Endless hours of self-teaching, debugging, and testing was core as I often was the sole designer/developer leading to many iterations of trial-and-error that comes with starting a company.
-                    <br>
-                    In addition to the hard skills(C#, Javascript, HTML, CSS, Prototyping, Wireframing, Developing, Device Testing etc.) and programs used(Unity, Adobe Products, Tableau, Axure etc.), my experience has offered countless soft skills including interviewing, hiring, directing, and managing developers, working in sprint development cycles, and overall communication and interaction in a business/high-level/fast-moving environment.  </h1>
-                    </div>
-                    <h1>Website Overhaul</h1>
-                    <h1>Lay the foundations regarding overall theme, ideas, and necessities of the website</h1>
-                    <p>This step involves lots of collaboration of taking their goals of this website and putting them into terms of implementation.  As a company, 
-were able to figure out what we wanted out of making this website, what features we want to showcase, and the overall feel we
-wanted users to have when coming to this website.  A lot of this involved taking the company ideas and putting them down into a 
-virtual form as well as using this website primarily as a marketing tool.</p>
-                     <img src="../img//website/graph.png" alt="deCervo Goals" class="decervoImg">  
-                     <h1>Search, Analyze, and Compare possible design layouts for the website</h1>
-                     <p>Here I took my companys' main ideas, their logos, their color schemes and mixed and match with differennt template
- styles and designs. This step showcased the design process and thinking of taking what works, is clean, and effective 
-and pushing this in line with the goals of deCervo.</p>
-                     <img src="../img//website/design.png" alt="Desgn Options" class="decervoImg">  
-                     <h1>Map User Experience Flow</h1>
-                     <p>User Experience flow involved lots of talking, brainstorming, and drawing of the user experience side of the website.
-The goal was to have fluidity throughout.  Have each step lead to the next logical step, each click lead to something
-useful for the user.  During this step we were able to fill in the gaps that were uncovered in the intial collection of 
-ideas and themes for the website.</p>  
-                     <img src="../img//website/flowchart.png" alt="uHIT Mobile Flowchart" class="decervoImg">
-                     <h1>Wireframe using the design templates and flow created in previous steps</h1>                 
-                     <p>Wireframing was by far the most complex part of this design process and implementation of the website.  These wireframes were
-changed, moved, added and worked upon constantly!!!  As seen below
-the mockups contained every aspect the website needed, from logos, to informational sections, to slideshow functionality.
-These were first done using illustrator(not a Mac user so no sketch...yet!), and later pushed into Axure which is a high-fidelity prototyping tool. </p>
-                     <img src="../img//website/HTML.png" alt="HTML Snip" class="decervoImg">
-                     <h1>Create HTML template and framework</h1>   
-                     <p>The main goal behind this step is to provide the developers a base template that they can work off of when implementing the site.
-This puts together the frameworks, theme classes, and simple layout.  This helped expedite the process once handed off to the 
-developers.</p>
-                     <img src="../img//website/prototype.png" alt="Prototype" class="decervoImg">
-                     <h1>Interview, hire, and direct web developers to assist in implementation</h1>   
-                     <p>The first part of this was finding a web developers that both had the skills to implement my designs from the wireframes and the 
-design sense to take what I invisioned to code.  This brought my wireframes to life, adding styling, movements, slideshows and other
-vital functionality that turned the simple frames to a complete website.  Consistent scheduling, check-ins, and code checking were vital for me to get the website how I envisioned.</p>
-                      <img src="../img//website/virtual.png" alt="Web Screen" class="decervoImg"> 
-                      <h1>Set up payment methods, subscription methods, and user blog sections</h1>  
-                      <p>This was the most vigourous step of this process and we began to implement third party resources into our website to increase
-functionality.  These included ways to include payment methods(stripe), ways to subscrive to email lists(mailchimp), and 
-creating sections for blogs and similar discussion forums(wordpress as the base, with forum aspects).</p>
-                     <img src="../img//website/mailchimp.png" alt="Mailchimp" class="decervoImg">   
-                     <h1>Ensure full responsiveness of site and insert needed linkage</h1>
-                     <p>This brought the website 
-functionality to the user side.  This step is in charge of responsiveness of the site as a whole so that each part and section works well
-on mobile as well as large desktop screens.  Links between each of the pages are made in response to the user flow.</p>
-                      <img src="../img//website/blog.png" alt="Blog" class="decervoImg">   
+                    <!--<div>-->
+                        <div class="stockIntro">
+                    <h1>Mission</h1>
+                    <h1>Streamlining the takeout ordering process by providing an app based ordering and payment solution, as well as a secure box to keep food at an appropriate temperature.</h1>
+                    <h1>Product: App and Temperature-Controlled Box Prototype</h1>  
 
-                       <h1>Mobile App</h1>
-                       <h1>Reconstruct, Brainstorm, Ideate</h1>
-\                       <h1>Rearch App to Marketable Product</h1>
-                       <img src="../img//decervoApp/old.png" alt="Research App" class="decervoImg"> 
-                       <h1>Wireframe and User Flow</h1>
-                        <img src="../img//decervoApp/wireframes.png" alt="App Wireframes" class="decervoImg"> 
+                    <!--<iframe width="100%" height="100%" src="https://www.youtube.com/embed/9UJYzSgAA-g" frameborder="0" allowfullscreen></iframe>-->
+                    <iframe width="80%" height="80%" src="https://www.youtube.com/embed/9UJYzSgAA-g?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 
-                       <h1>Test, Debug, Add Features</h1>
-                        <img src="../img//decervoApp/unity.png" alt="Implementation" class="decervoImg">   
+                 </div>
 
-                       <h1>3d Unity Development</h1>
-                       <img src="../img//decervoApp/new.png" alt="New Stadium" class="decervoImg">   
+                    <h1 class = "chowTitle">SPRINT 1</h1>
+                   <div class="imgTextStock">
+                     <img src="../img//chowbox/sprint1.png" alt="Sprint 1" class="decervoImg"> 
+                    <p class = "textOver chow">This first sprint was all about seeing whether there was interest in our service.  Simple paper prototypes were created to guide user testers and a pizza box was used in place of our box prototype.  Using pizza as an incentive, we gave brief interviews to each user-tester where we uncovered positive feedback as well as uncovering concerns moving forward with this product.
+                    </p>
+                 </div>
 
-                       <h1>Focus on Device Compatibility...iOS, Android, Tablet, Desktop, virtual</h1>
-                       <img src="../img//decervoApp/overview.png" alt="Research App" class="decervoImg">   
-
-                       <h1>Iterate with Users</h1>
-                       <p>Users from all fields
-                           Baseball Players
-                            -Main Audience targeting College and High School Players and Teams
-                            College Age Students
-                            -Those utilizing the app for the possiblities of coginitive performance
-                            Coaches/Retired People
-                            -Those not using the data, but people who will be analyzing the data
-                       </p>
-                        <img src="../img//decervoApp/data.png" alt="Profile Data" class="decervoImg">   
+                     <h1 class = "chowTitle">SPRINT 2</h1>
+                     <div class="imgTextStock">
+                     <p class = "textOver chow">These weeks were sprint iterating out paper prototype and upgrading our box prototyping to include the main feature of "automaticity."  The post-test interviews were directed at simplifying the user interface and user experience as this sprint was directed on the ordering process.</p>
+                     <img src="../img//chowbox/sprint2.png" alt="Sprint 2" class="decervoImg">  
+                     </div>
+                     <h1 class = "chowTitle">SPRINT 3</h1>
+                     <div class="imgTextStock">
+                     <p class = "textOver chow">Started with simple paper prototypes, user-tested and iterated upon to eventual designing of the user interface and compiling user-flows.  These wireframes 
+                         done in Figma(collaboration based barebones, cloud illustrator) and eventually moved to InVision for a Low-Fidelity HotSpot prototype.  These were presented on mobile devices and features were
+                         added and improved based off user feedback. </p>
+                         <!--<iframe width="438" height="930" src="//invis.io/5C9L84EEU" frameborder="0" allowfullscreen></iframe>  -->
+                     <img src="../img//chowbox/sprint3.png" alt="Sprint 3" class="decervoImg">
+                          </div>
+                     <h1 class = "chowTitle">SPRINT 4</h1>      
+                     <div class="imgTextStock">           
+                     <p class = "textOver chow">Now was the time to take our solution outside into the world.  We instigated three separate cases where users had to order, travel, and pickup from the "ChowBox" at the desired restaurant location.  Thorough interviews were conducted based on the user-testers experience where the product resounded with positive responses.
+                     </p>
+                     <img src="../img//chowbox/sprint4.png" alt="Sprint 4" class="decervoImg">
+    </div>
+                       <h1 class = "chowTitle">Explore the Prototype:</h1>
+                                               <!--<iframe width="438" height="930" src="//invis.io/5C9L84EEU" frameborder="0" allowfullscreen></iframe>  -->
+                                               <iframe src="https://invis.io/H37BC9PSG" frameborder="0" allowfullscreen="" style="width:100%; height:100%;" class="embed-content"></iframe>
 
  </div>
   </div>
