--- a/decervo.html
+++ b/decervo.html
@@ -45,56 +45,78 @@
                 <div class="container">
                     <div class="decervoText">
                     <h1>Role: UI Designer, UX Designer, Mobile App Developer</h1>
-                    <h1>deCervo is a New York, Colombia based company focused .  My work and involvement with the company began in the Spring 2016.  From my extensive background in baseball, knowledge of code/engineering, and user experience I have been able to redesign and assist in iteration of their mobile application and have most recently designed, directed, and implemented deCervo's entire website overhaul.    
+                    <h1>deCervo is a New York, Colombia University based company focused on enhacing player cognitive performance.  My work and involvement with the company began in the Spring 2016.  From my extensive background in baseball, knowledge of code/engineering, and user experience I have been able to redesign and assist in iteration of their mobile application and have most recently designed, directed, and implemented deCervo's entire website overhaul.    
                     <br>
                     Due to the current size of the company, my days were spent quickly learning, constantly adapting, and tailoring my skills for the ultimate goal of the company.  Endless hours of self-teaching, debugging, and testing was core as I often was the sole designer/developer leading to many iterations of trial-and-error that comes with starting a company.
                     <br>
                     In addition to the hard skills(C#, Javascript, HTML, CSS, Prototyping, Wireframing, Developing, Device Testing etc.) and programs used(Unity, Adobe Products, Tableau, Axure etc.), my experience has offered countless soft skills including interviewing, hiring, directing, and managing developers, working in sprint development cycles, and overall communication and interaction in a business/high-level/fast-moving environment.  </h1>
                     </div>
+
+
                     <h1>Website Overhaul</h1>
+
                     <h1>Lay the foundations regarding overall theme, ideas, and necessities of the website</h1>
-                    <p>This step involves lots of collaboration of taking their goals of this website and putting them into terms of implementation.  As a company, 
+                     <div class="imgTextStock">
+                    <p class = "textOver" >Collaboration of company goals for the website and putting them into terms of implementation.  As a company, 
 were able to figure out what we wanted out of making this website, what features we want to showcase, and the overall feel we
 wanted users to have when coming to this website.  A lot of this involved taking the company ideas and putting them down into a 
 virtual form as well as using this website primarily as a marketing tool.</p>
-                     <img src="../img//website/graph.png" alt="deCervo Goals" class="decervoImg">  
-                     <h1>Search, Analyze, and Compare possible design layouts for the website</h1>
-                     <p>Here I took my companys' main ideas, their logos, their color schemes and mixed and match with differennt template
+                     <img src="../img//website/graph.png" alt="deCervo Goals" class="decervoImg"> 
+</div>
+<h1>Search, Analyze, and Compare possible design layouts for the website</h1>
+                     
+                     <div class="imgTextStock">
+                     
+                     <p class = "textOver" >Here I took my companys' main ideas, their logos, their color schemes and mixed and match with differennt template
  styles and designs. This step showcased the design process and thinking of taking what works, is clean, and effective 
 and pushing this in line with the goals of deCervo.</p>
                      <img src="../img//website/design.png" alt="Desgn Options" class="decervoImg">  
+                     </div>
+
                      <h1>Map User Experience Flow</h1>
-                     <p>User Experience flow involved lots of talking, brainstorming, and drawing of the user experience side of the website.
+                      <div class="imgTextStock">
+                     <p class = "textOver" >User Experience flow involved lots of talking, brainstorming, and drawing of the user experience side of the website.
 The goal was to have fluidity throughout.  Have each step lead to the next logical step, each click lead to something
 useful for the user.  During this step we were able to fill in the gaps that were uncovered in the intial collection of 
 ideas and themes for the website.</p>  
                      <img src="../img//website/flowchart.png" alt="uHIT Mobile Flowchart" class="decervoImg">
-                     <h1>Wireframe using the design templates and flow created in previous steps</h1>                 
-                     <p>Wireframing was by far the most complex part of this design process and implementation of the website.  These wireframes were
+                      </div>
+                     <h1>Wireframe using the design templates and flow created in previous steps</h1>     
+                      <div class="imgTextStock">            
+                     <p class = "textOver" >Wireframing was by far the most complex part of this design process and implementation of the website.  These wireframes were
 changed, moved, added and worked upon constantly!!!  As seen below
 the mockups contained every aspect the website needed, from logos, to informational sections, to slideshow functionality.
 These were first done using illustrator(not a Mac user so no sketch...yet!), and later pushed into Axure which is a high-fidelity prototyping tool. </p>
                      <img src="../img//website/HTML.png" alt="HTML Snip" class="decervoImg">
+                      </div>
                      <h1>Create HTML template and framework</h1>   
-                     <p>The main goal behind this step is to provide the developers a base template that they can work off of when implementing the site.
+                      <div class="imgTextStock">
+                     <p class = "textOver" >The main goal behind this step is to provide the developers a base template that they can work off of when implementing the site.
 This puts together the frameworks, theme classes, and simple layout.  This helped expedite the process once handed off to the 
 developers.</p>
                      <img src="../img//website/prototype.png" alt="Prototype" class="decervoImg">
-                     <h1>Interview, hire, and direct web developers to assist in implementation</h1>   
-                     <p>The first part of this was finding a web developers that both had the skills to implement my designs from the wireframes and the 
+                      </div>
+                     <h1>Interview, hire, and direct web developers to assist in implementation</h1>  
+                      <div class="imgTextStock"> 
+                     <p class = "textOver" >The first part of this was finding a web developers that both had the skills to implement my designs from the wireframes and the 
 design sense to take what I invisioned to code.  This brought my wireframes to life, adding styling, movements, slideshows and other
 vital functionality that turned the simple frames to a complete website.  Consistent scheduling, check-ins, and code checking were vital for me to get the website how I envisioned.</p>
                       <img src="../img//website/virtual.png" alt="Web Screen" class="decervoImg"> 
+                       </div>
                       <h1>Set up payment methods, subscription methods, and user blog sections</h1>  
-                      <p>This was the most vigourous step of this process and we began to implement third party resources into our website to increase
+                       <div class="imgTextStock">
+                      <p class = "textOver" >This was the most vigourous step of this process and we began to implement third party resources into our website to increase
 functionality.  These included ways to include payment methods(stripe), ways to subscrive to email lists(mailchimp), and 
 creating sections for blogs and similar discussion forums(wordpress as the base, with forum aspects).</p>
                      <img src="../img//website/mailchimp.png" alt="Mailchimp" class="decervoImg">   
+                      </div>
                      <h1>Ensure full responsiveness of site and insert needed linkage</h1>
-                     <p>This brought the website 
+                      <div class="imgTextStock">
+                     <p class = "textOver" >This brought the website 
 functionality to the user side.  This step is in charge of responsiveness of the site as a whole so that each part and section works well
 on mobile as well as large desktop screens.  Links between each of the pages are made in response to the user flow.</p>
                       <img src="../img//website/blog.png" alt="Blog" class="decervoImg">   
+                       </div>
 
                        <h1>Mobile App</h1>
                        <h1>Reconstruct, Brainstorm, Ideate</h1>
