--- a/stockUp.html
+++ b/stockUp.html
@@ -49,7 +49,7 @@
                     <h1>Mission</h1>
                     <h1>Connect people to available resources in upcoming disaster situations.</h1>
                     <h1>Product: Low-Fidelity Working Prototpye</h1>  
-                 </div>
+<!--<iframe width="70%" height="70%%" src="https://www.youtube.com/embed/UqvvIVPuv_g?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>                 </div>-->
 
                     <h1>Blast Surveys</h1>
                    <div class="imgTextStock">
@@ -90,7 +90,7 @@
                       
                        <div class="col-md-12">
                        <div class = "col-md-8" >
-                            <h1>Home and Reccomendations</h1>
+                            <h1>Home and Recomendations</h1>
                            <p>Displays alerts for any upcoming natural disasters. This is the only feature we display on the page because we want to make sure we catch the user’s attention.
                            Recommendations ensure people are acquiring the correct items when preparing for disasters.</p></div>
                        <img src="../img//StockUp/home.png" alt="Home Screens" class="col-md-4 stockImg">
