Updates to homepage scrolling, contact section

--- a/decervo.html
+++ b/decervo.html
@@ -119,32 +119,49 @@ on mobile as well as large desktop screens.  Links between each of the pages are
                        </div>
 
                        <h1>Mobile App</h1>
+
+                     <h1>Transforming deCervo's research application to a marketable, consumer product.</h1>
+
                        <h1>Reconstruct, Brainstorm, Ideate</h1>
-\                       <h1>Rearch App to Marketable Product</h1>
+                      
+                       <div class="imgTextStock">
+                       <p class = "textOver" >Determine the target audience and users, explore design options for system implementation, and create a virtual platform.</p>
+                     
                        <img src="../img//decervoApp/old.png" alt="Research App" class="decervoImg"> 
+                         </div>
                        <h1>Wireframe and User Flow</h1>
+                       <div class="imgTextStock">
+                       <p class = "textOver" >Wireframing and map user flow Illustrator for designs, outlines, and user flows.  Made first 
+                           for iOS and Android platforms, and then formatted for desktop and tablets.
+                       </p>
                         <img src="../img//decervoApp/wireframes.png" alt="App Wireframes" class="decervoImg"> 
-
+                        </div>
                        <h1>Test, Debug, Add Features</h1>
+                       <div class="imgTextStock">
+                       <p class = "textOver"> Weeks of work in Unity, emulators, and pushing APKs to all types of devices.</p>
                         <img src="../img//decervoApp/unity.png" alt="Implementation" class="decervoImg">   
-
+                     </div>
                        <h1>3d Unity Development</h1>
+                       <div class="imgTextStock">
+                       <p class = "textOver" >Brought 3d game developers on to create the baseball enviroment, field, and animations.</p>
                        <img src="../img//decervoApp/new.png" alt="New Stadium" class="decervoImg">   
-
+                         </div>
                        <h1>Focus on Device Compatibility...iOS, Android, Tablet, Desktop, virtual</h1>
+                       <div class="imgTextStock">
+                       <p class = "textOver" >Reconstructed buttons, menus, and interfaces based off user feedback to make the app useable
+                           and throughly responsive.
+                       </p>
                        <img src="../img//decervoApp/overview.png" alt="Research App" class="decervoImg">   
-
+                        </div>
                        <h1>Iterate with Users</h1>
-                       <p>Users from all fields
-                           Baseball Players
-                            -Main Audience targeting College and High School Players and Teams
-                            College Age Students
-                            -Those utilizing the app for the possiblities of coginitive performance
-                            Coaches/Retired People
-                            -Those not using the data, but people who will be analyzing the data
+                       <div class="imgTextStock">
+                       <p class = "textOver" >First targeting our main audience - Professional, College, and High School baseball Players.  Next, 
+                           users utilizing the app for possibilities of cognitive performance. Finally people using the app for analyzing other players data.
                        </p>
                         <img src="../img//decervoApp/data.png" alt="Profile Data" class="decervoImg">   
+  </div>
 
+  <h1>The app is currently in the final stages and can be found on iTunes and the Android play store very shortly.</h1>
  </div>
   </div>
          <!--<script src="./assets/js/vendor.min.js?v=1.8"></script>
