Fixing Homepage Sections

--- a/index.html
+++ b/index.html
@@ -141,23 +141,27 @@
 				<div class="projectItem">
 					<img src="../img/chowbox.svg" alt="ChowBox" class="chow">
 				</div>
+                <a href="loopOS.html">
 				<div class="projectItem">
 					<img src="../img/loop.PNG" alt="loopOS" class="loop">
 					<h1 class = "projectTitle loopTitle"></h1>
 					<a class = "moreBtn loopBtn" href="loopOS.html">MORE</a>
 				</div>
+                </a>
+                <a href="http://jordanfreitas4.wixsite.com/infovis-2015">
 				<div class="projectItem">
 					<img src="../img/info.svg" alt="infographic" class="info">
 					<h1 class = "projectTitle infoTitle">INFOGRAPHIC</h1>
 					<a class = "moreBtn infoBtn" href="http://jordanfreitas4.wixsite.com/infovis-2015" target="_blank">MORE</a>
 				</div>
-				
+                </a>
+				<a href="https://github.com/JordanFreitas/Musaic">
 				<div class="projectItem">
 					<img src="../img/musaic.PNG" alt="musaic" class="musaic">
 					<h1 class = "projectTitle musaicTitle">Musaic</h1>
-					<a class = "moreBtn musaicBtn" href="#">MORE</a>
-			
+					<a class = "moreBtn musaicBtn" href="https://github.com/JordanFreitas/Musaic">MORE</a>
 			</div>
+            </a>
 			<!--<div class="col-lg-8 aboutSector">
                 <h1>Feel free to conact me regarding shared interests with my studies of research. Always reading and willing to collaborate with new, innovative ideas.</h1>
 
