more changes, decervo pages

--- a/decervo.html
+++ b/decervo.html
@@ -45,11 +45,11 @@
                 <div class="container">
                     <div class="decervoText">
                     <h1>Role: UI/UX Designer, Mobile App Developer</h1>
-                    <h1>deCervo is a New York, Colombia University based company focused on enhacing player cognitive performance.  My work and involvement with the company began in the Spring 2016.  From my extensive background in baseball, knowledge of code/engineering, and user experience I have been able to redesign and assist in iteration of their mobile application and have most recently designed, directed, and implemented deCervo's entire website overhaul.    
+                    <!--<h1>deCervo is a New York, Colombia University based company focused on enhacing player cognitive performance.  My work and involvement with the company began in the Spring 2016.  From my extensive background in baseball, knowledge of code/engineering, and user experience I have been able to redesign and assist in iteration of their mobile application and have most recently designed, directed, and implemented deCervo's entire website overhaul.    
                     <br>
                     Due to the current size of the company, my days were spent quickly learning, constantly adapting, and tailoring my skills for the ultimate goal of the company.  Endless hours of self-teaching, debugging, and testing was core as I often was the sole designer/developer leading to many iterations of trial-and-error that comes with starting a company.
                     <br>
-                    In addition to the hard skills(C#, Javascript, HTML, CSS, Prototyping, Wireframing, Developing, Device Testing etc.) and programs used(Unity, Adobe Products, Tableau, Axure etc.), my experience has offered countless soft skills including interviewing, hiring, directing, and managing developers, working in sprint development cycles, and overall communication and interaction in a business/high-level/fast-moving environment.  </h1>
+                    In addition to the hard skills(C#, Javascript, HTML, CSS, Prototyping, Wireframing, Developing, Device Testing etc.) and programs used(Unity, Adobe Products, Tableau, Axure etc.), my experience has offered countless soft skills including interviewing, hiring, directing, and managing developers, working in sprint development cycles, and overall communication and interaction in a business/high-level/fast-moving environment.  </h1>-->
                     </div>
 
 
